Avoid team_league duplicity

--- a/app/src/main/res/layout/activity_team_league.xml
+++ b/app/src/main/res/layout/activity_team_league.xml
@@ -10,13 +10,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewTeamLeague"
         android:layout_width="match_parent"
-        android:layout_height="349dp">
+        android:layout_height="349dp"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewTeams"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="10dp" />
 
 </LinearLayout>
