Implement Spinner Position

--- a/app/src/main/res/layout/adapter_list_team_league.xml
+++ b/app/src/main/res/layout/adapter_list_team_league.xml
@@ -46,15 +46,11 @@
                 android:text="Team"
                 android:textSize="30sp" />
 
-            <EditText
-                android:id="@+id/adapterEtPosicao"
-                android:layout_width="11dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Pos"
-                android:inputType="number"
-                android:minHeight="48dp" />
+            <Spinner
+                android:id="@+id/adapterTeamLeagueSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
