--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -1,46 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.LeagueActivity">
-    <include layout="@layout/toolbar"/>
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycleView"
-            android:layout_width="match_parent"
-            android:layout_height="560dp">
+    <include layout="@layout/toolbar" />
 
-        </androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="match_parent"
+        android:layout_height="512dp">
 
-        <EditText
-            android:id="@+id/etNameTeam"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="testeteste" />
+    </androidx.recyclerview.widget.RecyclerView>
 
-        <Spinner
-            android:id="@+id/spinnerTypePunctuation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/etNameTeam"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="testeteste"
+        tools:layout_editor_absoluteY="560dp" />
 
-        <Button
-            android:id="@+id/btnNew"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:layout_marginBottom="616dp"
-            android:onClick="save"
-            android:text="Save" />
-    </LinearLayout>
+    <Spinner
+        android:id="@+id/spinnerTypePunctuation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="605dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnNew"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="save"
+        android:text="Save"
+        tools:layout_editor_absoluteY="629dp" />
+
+</LinearLayout>
