--- a/app/src/main/res/layout/activity_team_league.xml
+++ b/app/src/main/res/layout/activity_team_league.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.TeamLeagueActivity">
-
+    <include layout="@layout/toolbar"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewTeamLeague"
         android:layout_width="match_parent"
