--- a/app/src/main/res/layout/popup_edit_league.xml
+++ b/app/src/main/res/layout/popup_edit_league.xml
@@ -83,7 +83,7 @@
                 android:id="@+id/btnPopupActivityTeamLeagueScore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Partidas" />
 
         </LinearLayout>
 
