Up: varargs in function findByIdLeague. New: Chip addMatch, teams search by league and match

--- a/app/src/main/res/layout/activity_team_league_score.xml
+++ b/app/src/main/res/layout/activity_team_league_score.xml
@@ -10,12 +10,27 @@
 
     <include layout="@layout/toolbar" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroupTeamLeagueScore"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        app:singleSelection="true" />
+        android:orientation="horizontal">
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroupTeamLeagueScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            app:singleSelection="true">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipAddMatch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:chipIcon="@drawable/add_generic" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayoutTeamLeagueScore"
