--- a/app/src/main/res/layout/adapter_list_team_league.xml
+++ b/app/src/main/res/layout/adapter_list_team_league.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/adapterListTeamLeagueCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
