--- a/app/src/main/res/layout/activity_equipes.xml
+++ b/app/src/main/res/layout/activity_equipes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.EquipesActivity">
+    tools:context=".view.TeamActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleView"
             android:layout_width="match_parent"
-            android:layout_height="503dp">
+            android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
 
