--- a/app/src/main/res/layout/carditem.xml
+++ b/app/src/main/res/layout/carditem.xml
@@ -11,25 +11,25 @@
     android:layout_marginRight="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginTop="20dp">
+    android:layout_marginTop="20dp"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <com.android.volley.toolbox.NetworkImageView
+        <ImageView
             android:id="@+id/image"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="?attr/colorPrimaryDark"
             android:scaleType="centerCrop"
-            />
+            android:background="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorPrimary"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -46,7 +46,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Id"
-                android:textAppearance="?attr/textAppearanceBody2"
                 android:textColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
