--- a/app/src/main/res/layout/activity_equipes.xml
+++ b/app/src/main/res/layout/activity_equipes.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/colorSecondary"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
