--- a/app/src/main/res/layout/carditem.xml
+++ b/app/src/main/res/layout/carditem.xml
@@ -4,15 +4,16 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@android:color/white"
+    app:cardBackgroundColor="@color/colorDetail"
     app:cardElevation="2dp"
     app:cardPreventCornerOverlap="true"
     app:cardCornerRadius="10dp"
     android:layout_marginRight="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginTop="20dp"
-    android:background="@color/white">
+    android:layout_marginTop="10dp"
+    android:background="@color/white"
+    app:strokeWidth="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorDetail"
             android:orientation="vertical"
             android:padding="10dp">
 
